web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-strict-rest-parameter/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,29)
1|"use strict"; function f(...yield) {}
 |                           ^
[SyntaxError]: unexpect keyword in strict mode (1,29)
1|"use strict"; function f(...yield) {}
 |                           ^
